# browser-favicon-buddy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README-EN.md  README.md  build.rs
.github/: copilot-instructions.md
.github/workflows/: release.yml
assets/: browser-favicon-buddy.desktop
locales/: en.yml  zh-CN.yml
src/: errors.rs  i18n.rs  lib.rs  main.rs
src/config/: favicon_service.rs  import_export.rs  language.rs  mod.rs
src/favicon/: cache.rs  fetch.rs  mod.rs  process.rs
src/ui/: embedded_fonts.rs  fonts.rs  mod.rs  styles.rs
src/ui/components/: app_state.rs  file_selector.rs  log_viewer.rs  mod.rs  progress.rs  settings.rs
src/ui/components/settings/: about.rs  import_export.rs  language.rs  services.rs
src/utils/: file.rs  format.rs  mod.rs
