[package]
name = "browser-favicon-buddy"
version = "1.0.0"
edition = "2021"
build = "build.rs"
description = "浏览器书签 favicon 加载工具"
authors = ["xianghongai <xianghongai@gmail.com>"]
license = "MIT"
repository = "https://github.com/xianghongai/browser-favicon-buddy"
homepage = "https://github.com/xianghongai/browser-favicon-buddy"
documentation = "https://github.com/xianghongai/browser-favicon-buddy#readme"
readme = "README.md"
keywords = ["favicon", "bookmark", "browser"]
categories = ["utilities"]

[features]
default = ["gui"]
gui = ["eframe", "egui", "rfd"]
# network feature 已无意义，已移除（reqwest/tokio/scraper 为主依赖）

[package.metadata.deb]
maintainer = "xianghongai <xianghongai@gmail.com>"
depends = "libc6 (>= 2.27)"
section = "utils"
priority = "optional"
assets = [
    ["assets/*", "usr/share/browser-favicon-buddy/assets/", "644"],
    ["assets/icon.png", "usr/share/pixmaps/browser-favicon-buddy.png", "644"],
    ["assets/browser-favicon-buddy.desktop", "usr/share/applications/browser-favicon-buddy.desktop", "644"],
]
extended-description = "批量提取和管理书签网站 favicon 的工具，带有图形界面。"

[dependencies]
eframe = { version = "0.31", optional = true }
egui = { version = "0.31", optional = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.23"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rfd = { version = "0.15", optional = true }
base64 = "0.22"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
regex = "1.10"
image = "0.25"
url = "2.5"
fluent = "0.17"
fluent-bundle = "0.16"
fluent-syntax = "0.12"
unic-langid = { version = "0.9", features = ["macros"] }
once_cell = "1.19"
serde_yaml = "0.9.34"
intl-memoizer = "0.5.3"
sys-locale = "0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

dirs = "6.0.0"

